--- a/css/site.css
+++ b/css/site.css
@@ -40,67 +40,119 @@ main {
 .welcome-carousel-image1 {
     box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
     background-image:url('../images/scene400.jpg');
-    height: 225px;
+    height: 206px; /* was 225px */
 }
 
 .welcome-carousel-image2 {
     box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
     background-image:url('../images/scene2-400.jpg');
-    height: 225px;
+    height: 206px;
 }
 
 .welcome-carousel-image3 {
     box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
     background-image:url('../images/scene4-400.jpg');
-    height: 225px;
+    height: 206px;
+}
+
+.jap-pics {
+    background-image: url('../images/scene5-400.jpg');
+    background-repeat: no-repeat;
+    height: 190px;
+    background-size:100%;
+}
+
+.jap-pics-6 {
+    background-image: url('../images/scene6-400.jpg');
+    background-repeat: no-repeat;
+    height: 190px;
+    /* min-width: 400px */
+    background-size:100%;
 }
 
 @media (min-width: 768px) { 
     .welcome-carousel-image1 {
         background-image:url('../images/scene800.jpg');
-        height: 450px;
+        height: 290px; /* was 450, 296 */
     } 
+
     .welcome-carousel-image2 {
         background-image:url('../images/scene2-800.jpg');
-        height: 450px;
+        height: 290px;
     }     
 
     .welcome-carousel-image3 {
         background-image:url('../images/scene4-800.jpg');
-        height: 450px;
-    }       
+        height: 290px;
+    }
+
+    .jap-pics {
+        background-image:url('../images/scene5-800.jpg');
+        background-repeat: no-repeat;
+        height: 290px;        
+    }
+
+    .jap-pics-6 {
+        background-image:url('../images/scene6-800.jpg');
+        background-repeat: no-repeat;
+        height: 290px;        
+    }    
 }
 
 @media (min-width: 992px) { 
     .welcome-carousel-image1 {
         background-image:url('../images/scene800.jpg');
-        height: 450px;
+        height: 330px;
     } 
     .welcome-carousel-image2 {
         background-image:url('../images/scene2-800.jpg');
-        height: 450px;
+        height: 330px;
     }     
 
     .welcome-carousel-image3 {
         background-image:url('../images/scene4-800.jpg');
-        height: 450px;
-    }       
+        height: 330px;
+    }  
+    
+    .jap-pics {
+        background-image:url('../images/scene5-800.jpg');
+        background-repeat: no-repeat;
+        height: 330px;
+    }    
+
+    .jap-pics-6 {
+        background-image:url('../images/scene6-800.jpg');
+        background-repeat: no-repeat;
+        height: 330px;
+    }    
 }
 
 @media (min-width: 1200px) { 
     .welcome-carousel-image1 {
         background-image:url('../images/scene1000.jpg');
-        height: 563px;
+        height: 420px;
     } 
     .welcome-carousel-image2 {
         background-image:url('../images/scene2-1000.jpg');
-        height: 563px;
+        height: 420px;
     }     
 
     .welcome-carousel-image3 {
         background-image:url('../images/scene4-1000.jpg');
-        height: 563px;
+        height: 420px;
     }       
+
+    .jap-pics {
+        background-image:url('../images/scene5-1000.jpg');
+        background-repeat: no-repeat;
+        height: 420px;
+    }
+
+    .jap-pics-6 {
+        background-image:url('../images/scene6-1000.jpg');
+        background-repeat: no-repeat;
+        height: 420px;
+    }    
 }
 
 .badge-new {
@@ -180,8 +232,12 @@ h1 {
     }
 }
 
-h1, h3 {
+h1, h3, .email {
     text-shadow: 2px 2px 3px black;
+}
+
+.email-1 {
+    box-shadow: 4px 4px 4px -2px rgba(0,0,0,0.69);
 }
 
 div h1 {
@@ -198,6 +254,10 @@ div h1 {
     filter: alpha(opacity=100);
     margin-right: 6px;
     border: 2px solid #828585;
+}
+
+.hero {
+    box-shadow: 9px 10px 11px -2px rgba(0, 0, 0, 0.69);
 }
 
 #sticky-footer {
