--- a/css/site.css
+++ b/css/site.css
@@ -66,8 +66,28 @@ main {
 .jap-pics-6 {
     background-image: url('../images/scene6-400.jpg');
     background-repeat: no-repeat;
-    height: 160px;
+    /* height: 160px; */
     background-size:100%;
+    /* width: 100%;
+    height:100%; */
+    /* object-fit:cover; */
+    /* object-position:bottom right; */
+    background-position: 50% 84%;
+}
+
+/* col-12 img {
+    width: 100%;
+    height: auto;
+    display: block;
+} */
+
+/* .col-12 img.scene-6  { */
+.scene-6  {    
+    /* width: 400px; */
+    /* height: auto; */
+    width: auto;
+    height: 140px;
+    /* display: block; */
 }
 
 @media (min-width: 576px) {
@@ -81,6 +101,7 @@ main {
     .jap-pics-6 {
         background-image: url('../images/scene6-800.jpg');
         background-repeat: no-repeat;
+        background-position: 50% 70%;
         height: 160px;
     }    
 }
@@ -138,6 +159,7 @@ main {
     .jap-pics-6 {
         background-image:url('../images/scene6-800.jpg');
         background-repeat: no-repeat;
+        background-position: 50% 62%;
         height: 200px;
     }    
 }
@@ -166,6 +188,7 @@ main {
     .jap-pics-6 {
         background-image:url('../images/scene6-1000.jpg');
         background-repeat: no-repeat;
+        background-position: 50% 57%;
         height: 250px;
     }    
 }
