--- a/css/site.css
+++ b/css/site.css
@@ -10,6 +10,7 @@ html {
 body {
     /* background-color:#4a5e63; */
     background-color:#546468;
+    /* background-color: rgb(97, 75, 57); */
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     height: 100%;
@@ -66,7 +67,7 @@ main {
 .jap-pics-6 {
     background-image: url('../images/scene6-400.jpg');
     background-repeat: no-repeat;
-    /* height: 160px; */
+    height: 160px;
     background-size:100%;
     /* width: 100%;
     height:100%; */
@@ -188,7 +189,7 @@ main {
     .jap-pics-6 {
         background-image:url('../images/scene6-1000.jpg');
         background-repeat: no-repeat;
-        background-position: 50% 57%;
+        /* background-position: 50% 57%; */
         height: 250px;
     }    
 }
@@ -287,6 +288,18 @@ div h1 {
 .hero {
     box-shadow: 9px 10px 11px -2px rgba(0, 0, 0, 0.69);
 }
+
+a[href^="http"] {
+    /* By File:Icon External Link.png: anonymous at MediaWiki (or someone else, whose work MediaWiki used) uploaded to Commons by Metalhead64derivative work MareklugNon-pixel version: TMg - File:Icon External Link.png, GPL, https://commons.wikimedia.org/w/index.php?curid=5949301 */
+    background: url(../images/Icon_External_Link.svg) no-repeat right;
+    padding: 16px;
+}
+
+a[href*="http"]::after {
+    font-style: italic;
+    content: " (goes off site)";
+}
+
 
 #sticky-footer {
   background: rgb(73, 73, 73);
