--- a/css/site.css
+++ b/css/site.css
@@ -77,13 +77,13 @@ main {
 
 .logo {
     background-color: rgb(66, 134, 66); 
-    padding: 0 6px; 
-    border-radius: 3px; 
+    padding: 2px 6px 4px 6px;
+    border-radius: 50%; 
     font-size: 1.1rem;
 }
 
 .logo-2 {
-    background-color: grey; 
+    background-color: rgba(128, 128, 128, .6);
     color: white;
 }
 
@@ -213,18 +213,21 @@ main {
 .para {
     font-size: 1.0rem;
     background-color: whitesmoke;
-    /* line-height: 1.625rem; */
     line-height: 1.8rem;
     padding: 10px;
     box-shadow: 9px 10px 11px -2px rgba(0,0,0,0.69);
     border-left: 3px solid ;
     border-color: orange;    
     letter-spacing: 1px;
-    margin-bottom: 30px;
+    margin-bottom: 64px;
 }
 
 .para-home {
     margin-bottom: 100px;
+}
+
+section p {
+    margin-bottom: .5rem;
 }
 
 .m-b {
@@ -237,30 +240,37 @@ h1 {
 }
 
 .pipe {
-    color: orange;    
+    color: orange;
 }
 
 .hdg-colour {
-    color: orange;
+    color: rgb(180, 119, 4);
 }
 
 @media (min-width: 768px) { 
     .para {
-        /* font-size: 1.2rem; */
-        font-size: 1.1rem;
-        /* line-height: 1.9rem; */
+        font-size: 1.0rem;
         line-height: 1.9rem;
-        margin-bottom: 90px;
+        margin-bottom: 80px;
     }
     .contact {
-        margin-bottom: 30px;
+        /* margin-bottom: 30px; */
     }
     h1 {
         font-size: 2.2rem;
     }
 }
 
-h1, h3, .email {
+@media (max-width: 332px) {
+    .contact {
+        margin-bottom: 70px;
+    }
+    .email {
+        font-size: .6rem;
+    }
+}
+
+h1, h3  {
     text-shadow: 2px 2px 3px black;
 }
 
@@ -300,13 +310,8 @@ a[href*="http"]::after {
 }
 
 #sticky-footer {
-    /* background: #525151; */
-    /* background: rgb(45,26,31);
-    background: linear-gradient(90deg, rgba(45,26,31,.9800) 42%, rgba(132,140,176,0.9472163865546218) 100%, rgba(54,55,57,1) 100%); */
     background: rgb(45,26,31);
     background: linear-gradient(90deg, rgba(45,26,31,0.908000700280112) 45%, rgba(96,67,95,1) 100%, rgba(54,55,57,1) 100%);
-    /* background: rgb(58,53,84);
-    background: linear-gradient(90deg, rgba(58,53,84,0.9808298319327731) 11%, rgba(110,101,153,0.9808298319327731) 95%); */
     position: fixed;
     width: 100%;
     left: 0;
