--- a/css/site.css
+++ b/css/site.css
@@ -83,15 +83,16 @@ main {
 }
 
 .logo-2 {
-    background-color: rgba(128, 128, 128, .6);
+    background-color: rgba(8, 83, 24, 0.5);
     color: white;
+    border-radius: 4px;
+    font-size: .9em;
 }
 
 @media (min-width: 576px) {
     .jap-pics {
         background-image:url('../images/scene5-800.jpg');
         background-repeat: no-repeat;
-        /* height: 460px;  */
         height: 160px;       
     }
 
@@ -253,9 +254,7 @@ h1 {
         line-height: 1.9rem;
         margin-bottom: 80px;
     }
-    .contact {
-        /* margin-bottom: 30px; */
-    }
+
     h1 {
         font-size: 2.2rem;
     }
